Fix for the end parameter

--- a/pack1500Daycamp.html
+++ b/pack1500Daycamp.html
@@ -178,7 +178,7 @@ var i,j=0,des;
       strn = strn + "&item_name_"    + j + "=" + escape (des) +
                     "&item_number_"  + j + "=" + i +
                     "&quantity_"     + j + "=" + order[i].qty +
-                    "&amount_"       + j + "=" + order[i].amt;
+                    "&amount_"       + j + "=" + totChart;
 }
   }
   if (j > 0) { 
