--- a/pack1500Daycamp.html
+++ b/pack1500Daycamp.html
@@ -175,6 +175,7 @@ var i,j=0,des;
       j = j + 1;
       des = order[i].des;
       totChart = Dollar((order[i].amt * 0.029) + 0.30 + order[i].amt); 
+      alert(totChart);
       strn = strn + "&item_name_"    + j + "=" + escape (des) +
                     "&item_number_"  + j + "=" + i +
                     "&quantity_"     + j + "=" + order[i].qty +
