Closing form via commenting out.

--- a/pack1500Daycamp.html
+++ b/pack1500Daycamp.html
@@ -233,7 +233,7 @@ function restrictNumericTextBox(id) {
 <!-- End of Script -->
 
 </head>
-
+<!--
 <body onload="restrictNumericTextBoxes()">
 
   <form name="orderf" id="orderf" 
@@ -353,4 +353,9 @@ Total Plus Surcharge
     </table>
 </form>
 </body>
-</html
+</html>
+-->
+    <body>
+      <h1>Closed for 2021</h1>
+    </body>
+  </html>
